--- a/index.html
+++ b/index.html
@@ -24,15 +24,7 @@
         <section class="task-list">
             <h2>Your tasks</h2>
            <div class="task-section">
-              <!--<div class="task-column">
-                <div class="task-row">
-                <input type="text" class="task" value="my tasks will be shown here" readonly>
-                </div>
-                <div class="change">
-                 <button class="edit">Edit</button>
-                 <button class="delete">Delete</button>
-                </div>
-             </div>-->
+              <!--DEMO DATA-->
             </div>
         </section>
     </main>
