--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
+    <title>Task List</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,8 +12,10 @@
 </head>
 <body>
     <header>
-        <h1><svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1" viewBox="0 0 48 48" enable-background="new 0 0 48 48" height="1.1em" width="1.1em" xmlns="http://www.w3.org/2000/svg"><g fill="#3F51B5"><polygon points="17.8,18.1 10.4,25.4 6.2,21.3 4,23.5 10.4,29.9 20,20.3"></polygon><polygon points="17.8,5.1 10.4,12.4 6.2,8.3 4,10.5 10.4,16.9 20,7.3"></polygon><polygon points="17.8,31.1 10.4,38.4 6.2,34.3 4,36.5 10.4,42.9 20,33.3"></polygon></g><g fill="#90CAF9"><rect x="24" y="22" width="20" height="4"></rect><rect x="24" y="9" width="20" height="4"></rect><rect x="24" y="35" width="20" height="4"></rect></g></svg>TeleCRM To-Do App</h1>
-          
+        <div class="title">
+        <svg stroke="currentColor" fill="currentColor" stroke-width="0" version="1" viewBox="0 0 48 48" enable-background="new 0 0 48 48" height="3.5em" width="3.5em" xmlns="http://www.w3.org/2000/svg"><g fill="#3F51B5"><polygon points="17.8,18.1 10.4,25.4 6.2,21.3 4,23.5 10.4,29.9 20,20.3"></polygon><polygon points="17.8,5.1 10.4,12.4 6.2,8.3 4,10.5 10.4,16.9 20,7.3"></polygon><polygon points="17.8,31.1 10.4,38.4 6.2,34.3 4,36.5 10.4,42.9 20,33.3"></polygon></g><g fill="#90CAF9"><rect x="24" y="22" width="20" height="4"></rect><rect x="24" y="9" width="20" height="4"></rect><rect x="24" y="35" width="20" height="4"></rect></g></svg>
+           <h1>TeleCRM To-Do App</h1>
+        </div>
         <form  id="input">
             <input type="text" class="input-main"placeholder="Enter A New Task">
             <input type="submit" class="input-submit" value="Add Task">
@@ -23,8 +25,17 @@
         
         <section class="task-list">
             <h2>Your tasks</h2>
-           <div class="task-section">
-              <!--DEMO DATA-->
+            <div class="task-section">
+              <!--<div class="task-column">
+                <div class="task-row">
+                <input type="text" class="task" value="my tasks will be shown here" readonly>
+                </div>
+                <div class="change">
+                 <button class="checkbox"><svg stroke="currentColor" fill="white" stroke-width="0" viewBox="1 -1.1 15 15" height="1.5em" width="1.5em" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M15.354 2.646a.5.5 0 010 .708l-7 7a.5.5 0 01-.708 0l-3-3a.5.5 0 11.708-.708L8 9.293l6.646-6.647a.5.5 0 01.708 0z" clip-rule="evenodd"></path><path fill-rule="evenodd" d="M1.5 13A1.5 1.5 0 003 14.5h10a1.5 1.5 0 001.5-1.5V8a.5.5 0 00-1 0v5a.5.5 0 01-.5.5H3a.5.5 0 01-.5-.5V3a.5.5 0 01.5-.5h8a.5.5 0 000-1H3A1.5 1.5 0 001.5 3v10z" clip-rule="evenodd"></path></svg>
+                 <button class="edit">EDIT</button>
+                 <button class="delete">DELETE</button>
+                </div>
+             </div>-->
             </div>
         </section>
     </main>
